# addon-system

./: .gitignore  README.md  addon.py  pyproject.toml  setup.cfg  setup.py
addon_system/: __init__.py  errors.py  make_addon.py  utils.py
addon_system/addon/: __init__.py  addon.py  builder.py  interface.py  meta.py  namespace.py  storage.py
addon_system/libraries/: base_manager.py  pip_manager.py
addon_system/system/: __init__.py  storage.py  system.py
