[metadata]
name = addon-system
version = 1.0.0
author = KuyuGama
author_email = mail.kuyugama@gmail.com
description = The AddonSystem library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kuyugama/addon-system
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
license = GNU GPLv3

[options]
package_dir =
    = addon_system
scripts =
    addon.py
packages = find:
python_requires = >=3.9

[options.packages.find]
where = addon_system